--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h3>Welcome</h3>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Welcome<title>
+</head>
+<body>
+  <h1>Welcome to allenlinatoc.github.io</h1>
+</body>
+</html>
